--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -12,71 +12,93 @@ vignette: >
 
 ## Purpose
 
-The purpose of the package *polmineR* is to facilitate the interactive analysis of corpora using R. Apart from performance and usability, key considerations for developing the package are:
+The purpose of the package *polmineR* is to offer a toolset for the interactive analysis of corpora using R. Apart from performance and usability, key considerations for developing the package are:
 
-* To provide a library with standard tasks such as concordances/keyword-in-context, cooccurrence statistics, or feature extraction.
+* To provide a library with standard tasks such as concordances/keyword-in-context, cooccurrence statistics, feature extraction, or preparation of term-document-matrics.
 
 * To keep the original text accessible and to offer a seamless integration of qualitative and quantitative steps in corpus analysis that facilitates validation.
 
-* To create a package that makes the creation and analysis of subcorpora ('partitions') easy. A particular strength of the package is to support research on synchronic and diachronic change of language use.
+* To make the creation and analysis of subcorpora ('partitions') as easy as possible. A particular strength of the package is to support research on synchronic and diachronic change of language use.
 
-* To offer performance for users with a standard infrastructure. The package picks up the idea of a three-tier software design. Corpus data are managed and indexed using the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/).
+* To offer performance for users with a standard infrastructure. The package is developed based on the idea of a three-tier software design. Corpus data are managed and indexed using the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), which serves as a backend.
 
 * To support sharing consolidated and documented data, following the ideas of reproducible research.
 
-The 'polmineR' package supplements R packages that are already widely used for text mining. The CRAN task view is a good place to learn about relevant packages, see  [CRAN](https://CRAN.R-project.org/view=NaturalLanguageProcessing). The polmineR is intended to be an interface between the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), an efficient system for storing and querying large corpora, and existing packages for mining text with advanced statistical methods.
+The *polmineR* package supplements R packages that are already widely used for text mining. The [CRAN NLP task view](https://CRAN.R-project.org/view=NaturalLanguageProcessing) is a good place to learn about relevant packages. The *polmineR* package is intended to be an interface between the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), an efficient system for storing and querying large corpora, and existing packages for text mining and text statistics.
 
-Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) provide a powerful and widely used syntax to query corpora. This is not an unique idea. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](http://sourceforge.net/projects/txm/), or with [CQPweb](http://cwb.sourceforge.net/cqpweb.php). The 'polmineR' package offers a library with the grammer of corpus analysis below a graphical user interface (GUI). It is a toolset to perform simple tasts efficiently as well as to implement complex workflows.
+Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) provide a powerful and widely used syntax to query corpora. This is not an unique idea. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](http://sourceforge.net/projects/txm/), or with [CQPweb](http://cwb.sourceforge.net/cqpweb.php). The *polmineR* package offers a library with the grammer of corpus analysis below a graphical user interface (GUI). It is a toolset to perform simple tasts efficiently as well as to implement complex workflows.
 
-Advanced user will benefit from acquiring a good understanding of the Corpus Workbench. The [Corpus Encoding Tutorial](http://cwb.sourceforge.net/files/CWB_Encoding_Tutorial.pdf) is an authoritative text for that. [The vignette of the rcqp package](https://cran.r-project.org/package=rcqp) includes an excellent explanation of the CWB data-model.
+Advanced users will benefit from acquiring a good understanding of the Corpus Workbench. The [Corpus Encoding Tutorial](http://cwb.sourceforge.net/files/CWB_Encoding_Tutorial.pdf) is an authoritative text for that. [The vignette of the rcqp package](https://cran.r-project.org/src/contrib/Archive/rcqp/), albeit archived, includes an excellent explanation of the CWB data-model. The inferface used now to use CWB/CQP functionality is the [RcppCWB package](https://CRAN.R-project.org/package=RcppCWB).
 
-The most important thing users need to now is the difference between "s"- and "p"-attributes. The CWB distinguishes structural attributes (s-attributes) that will contain the metainformation that can be used to generate subcorpora, and positional attributes (p-attributes).  Typically, the p-attributes will be 'word', 'pos' (for part-of-speech) and 'lemma' (for the lemmatized word form). 
+A basic issue to understand is the difference between *s*- and *p*-attributes. The CWB distinguishes structural attributes (s-attributes) that will contain the metainformation that can be used to generate subcorpora/partitions, and positional attributes (p-attributes).  Typically, the p-attributes will be 'word', 'pos' (for part-of-speech) and 'lemma' (for the lemmatized word form). 
 
 
 ## Getting started
 
-##### Check that the CORPUS_REGISTRY environment variable is set
+CRAN releases of *polmineR* can be installed with the usual call of `install.packages()`.
 
-The annex of the vignette includes a detailed explanation how to install polmineR on Windows, MacOS, and Linux. Once you have installed polmineR, check that the environment variable CORPUS_REGISTRY is set. 
+```{r install_polmineR, eval = FALSE}
+install.packages("polmineR")
+```
+
+Binaries are available for Windows, and everything should work out of the box. On macOS and Linux, system requirements need to be fulfilled. The annex of the vignette includes a detailed explanation how to install *polmineR* on macOS, and Linux.
+
+#### Loading polmineR
+
+The *polmineR* package is loaded just like any other package.
+
+```{r loading_polmineR}
+library(polmineR)
+```
+
+Upon loading the package, the package version is reported. As *polmineR* is under active development, please check whether a more recent version is available at CRAN. Development versions are available at GitHub.
+
+In addition, you will see an information on the *session registry*, which needs some further explanation.
+
+#### The session registry directory
+
+Indexed corpus data may be stored at different locations on your machine. CWB users will usually have a data directory with subdirectories for every single corpus. But corpus data may also reside within R packages, or anywhere else.
+
+It is not necessary to move indexed corpora to one single location. The only recommendation is to have them on a device that can be accessed sufficiently fast. Corpora are not fully loaded into memory, but information is retrieved from disk on a 'on demand'-basis. Thus, storing corpus data on a SSD may be faster than a hard drive.
+
+The CWB will look up information on the corpora in a directory called *registry* that is defined by the environment variable CORPUS_REGISTRY. Starting with version v0.7.9, the *polmineR* package creates a temporary registry directory in the temporary session directory. To get the path of the session registry directory, call `registry()`. The output is the session registry you have seen when loading *polmineR*.
+
+```{r get_registry}
+registry()
+```
+
+The session registry directory combines the registry files describing the corpora *polmineR* knows about. Upon loading *polmineR*, the files in the registry directory defined by the environment variable CORPUS_REGISTRY are copied to the session registry directory. To see whether the environment variable CORPUS_REGISTRY is set, use the `Sys.getenv()`-function. 
 
 ```{r, eval = FALSE}
 Sys.getenv("CORPUS_REGISTRY")
 ```
 
-The CORPUS_REGISTRY environment variable defines the directory with registry files that describe where the CWB will find the files of an indexed corpus, and the s- and p-attributes. See the annex for an explanation how to set the CORPUS_REGISTRY environment variable for the current R session, or permanently.
-
-
-##### Loading polmineR
-
-If the CORPUS_REGISTRY variable is set correctly, i.e. pointing to the directory with the registry files describing the corpora, load the polmineR package.
-
-```{r, message = FALSE}
-library(polmineR)
-```
+See the annex for an explanation how to set the CORPUS_REGISTRY environment variable for the current R session, or permanently.
 
 
 ##### Using and installing packaged corpora
 
-If you want to use a CWB corpus packaged in a R data package, you can call ´use´ with the name of the R package. To access the corpus in the data package, the CORPUS_REGISTRY environment variable will be reset. In the followings examples, the REUTERS corpus will be used for demonstration purposes. It is a sampe of Reuters articles that is included in the tm package (cp. https://www.scss.tcd.ie/~luzs/t/cs4ll4/sw/reuters21578-xml/) and may already be known for many R users.
+If you want to use a corpus wrapped into a R data package, call `use()` with the name of the R package. The function will add the registry files describing the corpora in the package to the session registry directory introduced before.
 
-```{r, message = FALSE}
-# use("polmineR")
+In the followings examples, the REUTERS corpus included in the *polmineR* package will be used for demonstration purposes. It is a sampe of Reuters articles that is included in the tm package (cp. https://www.scss.tcd.ie/~luzs/t/cs4ll4/sw/reuters21578-xml/), and may already be known to some R users.
+
+```{r use_polmineR_data, message = FALSE, eval = TRUE}
+use("polmineR")
 ```
 
-
-Note that the `use`-function will call the resetRegistry-function that can also be used to set again the original path to the directory with registry files. If you want to use corpora, you can download the EuroParl and the GermaParl data packages from a CRAN-like repository hosted by the PolMine Project.
+If you want to use corpora, you can download the EuroParl and the GermaParl data packages from a CRAN-like repository hosted by the PolMine Project.
 
 ```{r, eval = FALSE}
 install.packages("europarl.en", repo = "http://polmine.sowi.uni-due.de/packages")
 install.packages("GermaParl", repo = "http://polmine.sowi.uni-due.de/packages")
 ```
 
-Data packages with corpora have a version number which may be important for reproducing results, they can include a vignette documenting the data, and functions to perform specialized tasks.
+We some advantages to use R data packages for shipping corpora. Data packages with corpora have a version number which may be important for reproducing results, they can include a vignette documenting the data, and functions to perform specialized tasks.
 
 
 ##### Checking that corpora are available
 
-Use the corpus-method to check which corpora are accessible. It should be the REUTERS corpus in our case (the names of CWB corpora are always written upper case). In addition to the English REUTERS corpus, a small subset of the GermaParl corpus ("GERMAPARLMINI") is included in the polmineR package.
+The `corpus()`-method can be used to check which corpora are described in the registry and accessible. The REUTERS corpus in our case (note that the names of CWB corpora are always written upper case). In addition to the English REUTERS corpus, a small subset of the GermaParl corpus ("GERMAPARLMINI") is included in the *polmineR* package.
 
 ```{r, eval = TRUE, message = FALSE}
 corpus()
@@ -85,13 +107,13 @@ corpus()
 
 ##### Session settings
 
-Many functions in the polmineR package use settings that are stored in the general options settings. You can see these settings as follows:
+Many methods in the *polmineR* package use default settings that are set in the general options settings. Following a convention, settings relevant for the *polmineR* package simplystart with 'polmineR.' Inspect the settings as follows:
 
 ```{r, eval = FALSE, message = FALSE, results = 'hide'}
 options()[grep("polmineR", names(options()))]
 ```
 
-Several methods (such as kwic, or cooccurrences) will use these settings, if no explicit other value is provided. Here are a few examples how to change settings.
+Several methods (such as kwic, or cooccurrences) will use these settings, if no explicit other value is provided. You can see this in the usage section of help pages (`?kwic`, for instance). To change settings, this is how.
 
 ```{r}  
 options("polmineR.left" = 15)
@@ -102,7 +124,7 @@ options("polmineR.mc" = FALSE)
 
 ## Working with corpora: Core methods
 
-Core analytical tasks are implemented as methods (S4 class system), i.e. the bevaviour of the methods changes depending on the object that is supplied. Almost all methods can be applied to corpora as well as partitions (subcorpora). As an easy entry, methods applied to corpora are explained first.
+Core analytical tasks are implemented as methods (S4 class system), i.e. the bevaviour of the methods changes depending on the object that is supplied. Almost all methods can be applied to corpora (indicated by a length-one character vector) as well as partitions (subcorpora). As a quick start, methods applied to corpora are explained first.
 
 
 ##### Keyword-in-context (kwic)
@@ -135,9 +157,10 @@ count("REUTERS", c("Kuwait", "USA", "Bahrain"))
 count("REUTERS", c('"United" "States"', '"Saudi" "Arabia.*"'), cqp = TRUE)
 ```
 
+
 ##### Dispersions
 
-... get dispersions of counts accross one (or two) dimensions ...
+Use the `dispersion()`-method to get dispersions of counts accross one (or two) dimensions.
 
 ```{r, eval = TRUE, message = FALSE}
 oil <- dispersion("REUTERS", query = "oil", sAttribute = "id", progress = FALSE)
@@ -147,7 +170,7 @@ saudi_arabia <- dispersion(
   )
 ```
 
-Note that it is a data.table that is returned. Visualising the result as a barplot ...
+Note that it is a data.table that is returned. You can proceed to a visualisation easily.
 
 ```{r, eval = TRUE}
 barplot(height = saudi_arabia[["count"]], names.arg = saudi_arabia[["id"]], las = 2)
@@ -156,7 +179,7 @@ barplot(height = saudi_arabia[["count"]], names.arg = saudi_arabia[["id"]], las 
 
 ##### Cooccurrences
 
-... get cooccurrence statistics ...
+To analyse the neighborhood of a token, or the match for a CQP query, use `cooccurrences()`.
 
 ```{r, eval = TRUE, message = FALSE}
 oil <- cooccurrences("REUTERS", query = "oil")
@@ -168,7 +191,7 @@ as.data.frame(top5)
 
 ## Working with subcorpora - partitions
 
-Easily creating partitions (i.e. subcorpora) based on s-attributes is an important feature of the 'polmineR' package. So if we want to work with the articles in the REUTERS corpus related to Kuaweit in 2006:
+Working with partitions (i.e. subcorpora) based on s-attributes is an important feature of the 'polmineR' package. So if we want to work with the articles in the REUTERS corpus related to Kuaweit in 2006:
 
 ```{r, eval = TRUE, message = FALSE, results = 'hide'}
 kuwait <- partition("REUTERS", places = "kuwait", regex = TRUE)
@@ -184,7 +207,7 @@ To evaluate s-attributes, regular expressions can be used.
 
 ```{r, eval = TRUE, message = FALSE}
 saudi_arabia <- partition("REUTERS", places = "saudi-arabia", regex = TRUE)
-sAttributes(saudi_arabia, "id")
+s_attributes(saudi_arabia, "id")
 ```
 
 If you work with a flat XML structure, the order of the provided s-attributes may be relevant for speeding up the set up of the partition. For a nested XML, it is important that with the order, you move from ancestors to childs. For further information, see the documentation of the partition-function.
@@ -196,7 +219,7 @@ The cooccurrences-method can be applied to partition-objects.
 
 ```{r, eval = TRUE, message = FALSE}
 saudi_arabia <- partition("REUTERS", places = "saudi-arabia", regex = TRUE)
-oil <- cooccurrences(saudi_arabia, "oil", pAttribute = "word", left = 10, right = 10)
+oil <- cooccurrences(saudi_arabia, "oil", p_attribute = "word", left = 10, right = 10)
 ```
 
 Note that is is possible to provide a query that uses the full CQP syntax. The statistical analysis of collocations to the query can be accessed as the slot "stat" of the context object. Alternatively, you can get the table with the statistics using ´as.data.frame´.
@@ -212,8 +235,8 @@ df[1:5, c("word", "ll", "rank_ll")]
 To understand the occurance of a phenomenon, the distribution of query results across one or two dimensions will often be interesing. This is done via the 'distribution' function. The query may use the CQP syntax.
 
 ```{r, eval = TRUE}
-q1 <- dispersion(saudi_arabia, query = 'oil', "id", progress = FALSE)
-q2 <- dispersion(saudi_arabia, query = c("oil", "barrel"), "id", progress = FALSE)
+q1 <- dispersion(saudi_arabia, query = 'oil', s_attribute = "id", progress = FALSE)
+q2 <- dispersion(saudi_arabia, query = c("oil", "barrel"), s_attribute = "id", progress = FALSE)
 ```
 
 
@@ -223,7 +246,7 @@ To identify the specific vocabulary of a corpus of interest, a statistical test 
 
 ```{r, eval = TRUE, message = FALSE}
 qatar <- partition("REUTERS", places = "saudi-arabia", regex = TRUE)
-qatar <- enrich(qatar, pAttribute = "word")
+qatar <- enrich(qatar, p_attribute = "word")
 
 qatar_features <- features(qatar, "REUTERS", included = TRUE)
 y <- subset(qatar_features, rank_chisquare <= 10.83 & count_coi >= 5)
@@ -236,9 +259,10 @@ as.data.frame(y)[,c("word", "count_coi", "count_ref", "chisquare")]
 For many applications, term-document matrices are the point of departure. The tm class TermDocumentMatrix serves as an input to several R packages implementing advanced text mining techniques. Obtaining this input from a corpus imported to the CWB will usually involve setting up a partitionBundle and then applying a method to get the matrix.
 
 ```{r, eval = TRUE}
-articles <- partitionBundle("REUTERS", sAttribute = "id", progress = FALSE)
-articles <- enrich(articles, pAttribute = "word", verbose = FALSE)
-tdm <- as.TermDocumentMatrix(articles, col = "count", verbose = FALSE)
+articles <- partition_bundle("REUTERS", s_attribute = "id", progress = FALSE)
+articles_count <- count(articles, p_attribute = "word")
+tdm <- as.TermDocumentMatrix(articles_count, col = "count", verbose = FALSE)
+
 class(tdm) # to see what it is
 show(tdm)
 m <- as.matrix(tdm) # turn it into an ordinary matrix
@@ -260,19 +284,13 @@ The following instructions assume that you have installed R. If not, install it 
 
 #### Windows (32 and 64 bit)
 
-For 64bit Windows, an interface included in the package RcppCWB is offered. It can be installed from the R package repository on the Webserver of the PolMine project as follows. It will be installed automatically when you install polmineR. If that does not happen, you can do it manually.
-
-```{r, eval = FALSE}
-install.packages("RcppCWB")
-```
-
-Then install polmineR.
+Install *polmineR* and all dependencies the conventional way.
 
 ```{r, eval = FALSE}
 install.packages("polmineR")
 ```
 
-To install the most recent development version that is hosted in a GitHub repository, use the convenient installation mechanism offered by the devtools package.
+To install the most recent development version, hosted in a GitHub repository, use the convenient installation mechanism offered by the devtools package.
 
 ```{r, eval = FALSE}
 install.packages("devtools")
@@ -321,22 +339,18 @@ Fourth, install RcppCWB.
 install.packages("RcppCWB")
 ```
 
+Now everything is ready to install polmineR.
+
+```{r, eval = FALSE}
+install.packages("polmineR")
+```
+
 A quick check that polmineR is installed correctly is to load the library, and to check which corpora are available.
 
 ```{r, eval = FALSE}
 library(polmineR)
+use("polmineR")
 corpus()
-```
-
-You should see a message that "CQI.Rcpp" is the interface used, and that the REUTERS corpus is on your system.
-
-
-#### Installing 'polmineR'
-
-The latest release of polmineR can be installed from CRAN using the usual `install.packages`-function.
-
-```{r mac_install_polmineR_cran, eval = FALSE}
-install.packages("polmineR")
 ```
 
 The development version of *polmineR* can be installed using devtools:
@@ -368,7 +382,7 @@ sudo apt-get upgrade
 
 #### Installing RStudio
 
-It is highly recommended to install [RStudio](https://www.rstudio.com/products/rstudio/download/#download), a powerful IDE for R. Output of polmineR methods is generally optimized to be displayed using RStudio facilities. If you are working on a remote server, running RStudio Server may be an interesting option to consider.
+It is highly recommended to install [RStudio](https://www.rstudio.com/products/rstudio/download/#download). Output of polmineR methods is generally optimized to be displayed using RStudio facilities. If you are working on a remote server, running RStudio Server may be an interesting option to consider.
 
 #### Base Installation of polmineR
 
@@ -399,10 +413,11 @@ Finally, check the installation.
 ```{r, eval = FALSE}
 library(polmineR)
 use("polmineR")
+corpus()
 ```
 
 
-#### Annex I: Setting the CORPUS_REGISTRY environment variable
+#### Annex II: Setting the CORPUS_REGISTRY environment variable
 
 The environment variable "CORPUS_REGISTRY" can be set as follows in R:
 
@@ -411,88 +426,4 @@ Sys.setenv(CORPUS_REGISTRY = "C:/PATH/TO/YOUR/REGISTRY")
 ```
 
 To set the environment variable CORPUS_REGISTRY permanently, see the instructions R offer how to find the file '.Renviron' or '.Renviron.site' when calling the help for the startup process(`?Startup`).
-
-
-#### Annex II: Setting the interface to the Corpus Workbench
-
-The standard interface used by the polmineR package to extract information from CWB indexed corpora is the package 'RcppCWB'. The interface is defined in a class called 'CQI'. To check which interface is used:
-
-```{r, eval = TRUE}
-class(polmineR:::CQI)
-```
-
-If you see "CQI.perl" leading the character vector that is returned, something went wrong. Accessing the corpora using perl scripts incurs an incredible performence loss. Reset the interface as follows:
-
-```{r, eval = FALSE}
-unlockBinding(env = getNamespace("polmineR"), sym = "CQI")
-assign("CQI", CQI.rcqp$new(), envir = getNamespace("polmineR"))
-lockBinding(env = getNamespace("polmineR"), sym = "CQI")
-```
-
-
-An alternative interface is provided by the package 'rcqp', [available at GitHub][https://github.com/PolMine/polmineR.Rcpp] so far.  To install and use 'rcqp':
-
-```{r, eval = FALSE}
-install.packages("rcqp")
-```
-
-To switch to the interface offered by polmineR.Rcpp, proceed as follows:
-
-```{r, eval = FALSE}
-unlockBinding(env = getNamespace("polmineR"), sym = "CQI")
-assign("CQI", CQI.Rcpp$new(), envir = getNamespace("polmineR"))
-lockBinding(env = getNamespace("polmineR"), sym = "CQI")
-```
-
-
-#### Annex III: polmineR - Full installation
-
-To have access to all package functions and to run all package tests, the installation of further system requirements and packages is required. The xlsx dependency requires that rJava is installed and configured for R. That is done on the shell:
-
-```{sh, eval = FALSE}
-sudo apt-get install openjdk-8-jre
-sudo R CMD javareconf
-```
-
-To run package tests including (re-)building the manual and vignettes, a working installation of Latex is required, too. Be aware that this may be a time-consuming operation.
-
-```{sh, eval = FALSE}
-sudo apt-get install texlive-full texlive-xetex 
-```
-
-Now install the remaining packages from within R.
-
-```{r, eval = FALSE}
-devtools::install_github("PolMine/polmineR.Rcpp")
-install.packages(pkgs = c("rJava", "xlsx", "tidytext"))
-```
-
-
-## Annex IV: CWB corpora and the CORPUS_REGISTRY environment variable
-
-Indexed corpora can be stored in two different locations. The conventional way is to keep CWB corpora in a directory with two subdirectories, a 'registry' directory, and an 'indexed_corpora' directory. The files in the registry directory ('registry' in short) describe the main features of a corpus, and where it is stored. It is necessary to inform rcqp, the package used by polmineR to access corpora, about the registry directory. That is done using the CORPUS_REGISTRY environment variable. It needs be defined before loading rcqp and polmineR. Note that you need to set the environment to the 'registry' folder, not the files that are located in this directory.
-
-The CORPUS_REGISTRY environment variable can be set manually from the R console:
-
-```{r, eval = FALSE}
-Sys.setenv(CORPUS_REGISTRY = "/PATH/TO/YOUR/REGISTRY/DIRECTORY")
-```
-
-To check whether and how the environment variable is set:
-
-```{r, eval = FALSE}
-Sys.getenv("CORPUS_REGISTRY")
-```
-
-You can set the environment variable permanently to avoid having to set it each time before you want to use polmineR. A good way is to inlude the following line in the file .Renviron in your home directory:
-
-```{r, eval = FALSE}
-CORPUS_REGISTRY="/PATH/TO/YOUR/REGISTRY/DIRECTORY"
-```
-
-There are a few other options to have environment variables set at every time you launch polmineR. To learn about these, use the help for the R startup procedure.
-
-```{r, eval = FALSE}
-?Startup 
-```
 
