--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -80,7 +80,7 @@ See the annex for an explanation how to set the CORPUS_REGISTRY environment vari
 
 If you want to use a corpus wrapped into a R data package, call `use()` with the name of the R package. The function will add the registry files describing the corpora in the package to the session registry directory introduced before.
 
-In the followings examples, the REUTERS corpus included in the *polmineR* package will be used for demonstration purposes. It is a sampe of Reuters articles that is included in the tm package (cp. https://www.scss.tcd.ie/~luzs/t/cs4ll4/sw/reuters21578-xml/), and may already be known to some R users.
+In the followings examples, the REUTERS corpus included in the *polmineR* package will be used for demonstration purposes. It is a sample of Reuters articles that is included in the tm package (cp. http://www.daviddlewis.com/resources/testcollections/reuters21578/), and may already be known to some R users.
 
 ```{r use_polmineR_data, message = FALSE, eval = TRUE}
 use("polmineR")
